# Golden_Eagle

./: .gitignore  CMakeLists.txt  Config.hpp  Config.hpp.in  FindGLEW.cmake  Makefile  README.md
ext/cryptopp-5.6.2/: CMakeLists.txt
ext/glew-1.10.0/: CMakeLists.txt
ext/glew-1.10.0/src/: CMakeLists.txt
ext/glfw-3.0.3/: CMakeLists.txt
res/: CMakeLists.txt  helloworld.txt  res
res/model/stump/tiff/: bump.tif
res/shader/: SimpleVertexShader.frag  SimpleVertexShader.vert  deferred1.glsl  fullscreen.glsl  scene.glsl  scene_background.glsl  scene_default_triangles.glsl  scene_default_triangles_adjacency.glsl  scene_grass.glsl  scene_stars.glsl  scene_terrain_chunk.glsl  test.glsl  test2.glsl
res/shaders/: SimpleVertexShader.frag  SimpleVertexShader.vert
src/: CMakeLists.txt  Config.hpp.in  Entity.hpp  Frame.hpp  Initial3D.hpp  Makefile  MovableFrame.hpp  Octree.hpp  Scene.hpp  Vector3.hpp  cmake_install.cmake  main.cpp
src/ambition/: Ambition.hpp  Bound.hpp  ByteBuffer.hpp  CMakeLists.txt  Chrono.cpp  Chrono.hpp  Client.cpp  Client.hpp  ClientSocket.cpp  ClientSocket.hpp  Concurrent.cpp  Concurrent.hpp  DataPacket.hpp  Entity.hpp  Error.hpp  Event.hpp  Frame.hpp  GPUCache.cpp  GPUCache.hpp  GameServer.hpp  HTTP.hpp  Image.hpp  Initial3D.hpp  ListenSocket.cpp  ListenSocket.hpp  LocalGameServer.hpp  Log.cpp  Log.hpp  MovableFrame.hpp  Packet.cpp  Packet.hpp  Perlin.cpp  Perlin.hpp  RemoteGameServer.cpp  RemoteGameServer.hpp  Scene.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneNode.cpp  Server.cpp  (+9 more)
src/ambition/packets/: HelloPacket.hpp
src/auth_server/: .gitignore  app.js  package.json  users.nedb
src/auth_server/routes/: users.js
src/common/: Ambition.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Entity.hpp  Event.hpp  Frame.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  MovableFrame.hpp  Scene.hpp  SceneNode.cpp  Socket.hpp  test.hpp
src/common/sg/: Entity.hpp  Frame.hpp  MovableFrame.hpp  Scene.hpp  SceneNode.cpp  SceneNode.hpp  SceneRoot.hpp  TriangleEntity.hpp
src/game/: CMakeLists.txt  Entity.hpp  Frame.hpp  GLee.c  GLee.h  Initial3D.hpp  MovableFrame.hpp  Octree.hpp  SceneNode.cpp  SceneNode.hpp  SceneRoot.hpp  Shader.hpp  TriangleEntity.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp  loadBitmap.cpp  loadBitmap.hpp  loadOBJ.cpp  loadOBJ.h  loadOBJ.hpp  loadShader.cpp  loadShader.hpp  main.cpp
src/gamesrv/: CMakeLists.txt  main.cpp
src/nogl_game/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
src/test/: CMakeLists.txt  comms.cpp  packet_tests.cpp
winshit/: admincmd.lnk  reslink.bat
